--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -115,6 +115,7 @@
 
     h4 {
       font-weight: 500;
+      color: var(--secondary-color);
     }
 
     p {
@@ -126,7 +127,7 @@
 }
 
 .app__skills-exp-year {
-  margin-right: 3rem;
+  margin-right: 2rem;
 
   p {
     font-weight: 800;
