--- a/src/App.scss
+++ b/src/App.scss
@@ -46,8 +46,8 @@
   align-items: flex-end;
 
   p {
-    text-transform: uppercase;
     color: var(--black-color);
+    font-size: 0.8rem;
   }
 }
 
@@ -72,7 +72,7 @@
 }
 
 .p-text {
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-align: left;
   color: var(--gray-color);
   line-height: 1.5;
@@ -80,6 +80,15 @@
   @media screen and (min-width: 2000px) {
     font-size: 1.75rem;
   }
+}
+
+.fontsmaller {
+  font-size: 0.8rem;
+}
+
+.fontsmaller-co {
+  font-size: 0.8rem;
+  font-weight: 700;
 }
 
 .bold-text {
